--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>KongerHub</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/user-attachments/assets/81c0316e-f7f2-4ece-b039-7f922e724961">
     <meta charset="utf-8" />
     <meta name="theme-color" content="#FFFFFF">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
