--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>KongerHub</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/user-attachments/assets/d2fbae6f-5ae4-4e64-810d-a8ad36afea23">
     <meta charset="utf-8" />
     <meta name="theme-color" content="#FFFFFF">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
