--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>404 Not Found</title>
     <style>
         body {
-            background-color: #000;
+            background-color: #0A0A0A;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
@@ -47,30 +47,6 @@
         .container a:hover {
             background-color: #ccc;
         }
-        .background-circle {
-            position: absolute;
-            border-radius: 50%;
-            background-color: #222;
-            z-index: -1;
-        }
-        .circle1 {
-            width: 300px;
-            height: 300px;
-            top: 20%;
-            left: 15%;
-        }
-        .circle2 {
-            width: 500px;
-            height: 500px;
-            bottom: 10%;
-            right: 10%;
-        }
-        .circle3 {
-            width: 200px;
-            height: 200px;
-            bottom: 20%;
-            left: 30%;
-        }
     </style>
 </head>
 <body>
@@ -78,10 +54,7 @@
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <p>Sorry, but the page you were looking for could not be found.</p>
-        <a href="https://kongerhub.vercel.app">Go to Homepage</a>
+        <a href="https://kongerhub.vercel.app">Back to Home</a>
     </div>
-    <div class="background-circle circle1"></div>
-    <div class="background-circle circle2"></div>
-    <div class="background-circle circle3"></div>
 </body>
 </html>
