--- a/shaders.html
+++ b/shaders.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -1382,7 +1383,7 @@
             <div class="wrapper">
               <div class="inner" data-onvisible-trigger="1">
                 <h2 id="text20" class="style2">KongerHub Reshaders</h2>
-                <p id="text21" class="style3">Ever since ROBLOX added hyperion, shaders have been banned from ROBLOX. We can reverse that by using NVIDIA and soon to be AMD.</p>
+                <p id="text21" class="style3">Ever since ROBLOX added hyperion shaders have been banned from ROBLOX. We can reverse that by using NVIDIA and soon to be AMD.</p>
               </div>
             </div>
           </div>
